--- a/polls/templates/home.html
+++ b/polls/templates/home.html
@@ -97,7 +97,7 @@
         <ul>
           <li><a href="{% url 'home' %}">Home</a></li>
           <li><a href="{% url 'contact' %}">Contact</a></li>
-          <li><a href="#">Work With Us</a></li>
+          <li><a href="https://ashok8601.github.io/Blog/">Work With Us</a></li>
           <li><a href="#">My Gear</a></li>
         </ul>
       </div>
