--- a/polls/templates/contact.html
+++ b/polls/templates/contact.html
@@ -159,6 +159,7 @@ footer p {
       <a href="/courses">Courses</a> |
       <a href="/about">About Us</a> |
       <a href="/contact">Contact</a>
+      <a href="https://ashok8601.github.io/Blog/">Contact</a>
     </nav>
   </header>
 
