--- a/polls/templates/home.html
+++ b/polls/templates/home.html
@@ -52,7 +52,7 @@
     <ul>
       <li><a href="{% url 'home' %}">Home</a></li>
       <li><a href="{% url 'services' %}">Services</a></li>
-      <li><a href="{% url 'projects' %}">Projects</a></li>
+      <li><a href="{% url 'project' %}">Projects</a></li>
       <li><a href="{% url 'about' %}">About</a></li>
       <li><a href="{% url 'contact' %}">Contact</a></li>
     </ul>
