--- a/polls/templates/base.html
+++ b/polls/templates/base.html
@@ -11,14 +11,14 @@
 <body>
 
   <!-- Common Header -->
-  {% include 'partials/header.html' %}
+  {% include 'partial/header.html' %}
 
   <!-- Main Content -->
   {% block content %}
   {% endblock %}
 
   <!-- Common Footer -->
-  {% include 'partials/footer.html' %}
+  {% include 'partial/footer.html' %}
 
   <!-- JS Scripts -->
   <script>
