--- a/polls/templates/partial/header.html
+++ b/polls/templates/partial/header.html
@@ -1,3 +1,5 @@
+
+{% load static %}
 <!-- templates/partials/header.html -->
 <header>
   <div class="logo"><img src="{% static 'images/logo.png' %}" alt="Syist Group Logo" /></div>
