--- a/polls/templates/base.html
+++ b/polls/templates/base.html
@@ -5,8 +5,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>{% block title %}Syist Group{% endblock %}</title>
+  <title>{% block title %} Default Title {% endblock %}</title>
   <link rel="stylesheet" href="{% static 'home.css' %}" />
+  {% block head_extra%}{% endblock %}
 </head>
 <body>
 
