--- a/polls/templates/python_300_project.html
+++ b/polls/templates/python_300_project.html
@@ -1,4 +1,7 @@
-{% extends 'base.html' % }
+{% extends 'base.html' %}
+
+{% block title %}Home | Syist Group{% endblock %}
+
 {% block title %}Syist Group | 300 Interview Questions & 50 Python Programs{% endblock %}
 
 {% block head_extra %}
