--- a/polls/templates/services.html
+++ b/polls/templates/services.html
@@ -1,6 +1,6 @@
-{% extends'base.html'%}
-  {%block tuttle%} Syist Group  Services {% endblock%}
-  {%% block head_extra }
+{% extends 'base.html' %}
+  {% block tittle %} Syist Group  Services {% endblock%}
+  {%block head_extra %}
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -36,8 +36,8 @@
       background-color: #005bb5;
     }
   </style>
-{%endblock%}
-{%block content%}
+{% endblock %}
+{% block content %}
 
   <h1>Our Services</h1>
 
