--- a/polls/templates/home.html
+++ b/polls/templates/home.html
@@ -88,7 +88,7 @@
   </section>
   
 
-<a href="{% url 'contact' %}" style="text-decoration: none; color: inherit;">
+<a href="{% url 'web' %}" style="text-decoration: none; color: inherit;">
   <div class="card">
     <img src="{% static 'images/img4.png' %}" alt="Web Development">
     <div class="card-content">
